mb befor rebase conflict

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2016 Lodfk
+	Adding changing before rebasing files
 -->
 <head>
 	<title>An Very Respectful Website</title>
