--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2016 Lodfk
-	Adding changing before rebasing files
+	Some silly changes from master branch
 -->
 <head>
-	<title>An Very Respectful Website</title>
+	<title>Silly changes on Master Branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,13 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Just filler Content -->
 		<p>
-			Just some content
+			Just stuff for now....
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Vlad FK 2014</p>
+		<p>&copy; Vlad FK/UK 2014</p>
 	</footer>
 </body>
 </html>
